prefetched-manifests/aigateway/manifests/maascontroller/webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maas-controller-webhook-service
  namespace: system
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: maas-controller-webhook-cert
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    control-plane: maas-controller
